# AI_Agent

./: README.md  db.sqlite3  manage.py  requirements.txt  setup.cfg  test_agent.py
chats/: admin.py  forms.py  models.py  urls.py  utils.py  vector.py  views.py
chats/chroma_shopping_db/: chroma.sqlite3
chats/migrations/: 0001_initial.py
chats/templates/: base.html  chat.html  home.html
chroma_shopping_db/: chroma.sqlite3
chrome_langchain_db/: chroma.sqlite3
myGpt/: asgi.py  urls.py
shopping_ai_agent/: __init__.py  agent.py  memory.py
shopping_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
