[metadata]
name = shopping_ai_agent
version = 0.1.0
description = Pluggable shopping assistant agent supporting OpenAI-compatible LLMs
author = Neamul Haq
license = MIT

[options]
packages = find:
install_requires =
    langchain
    langchain-core
    langchain-community
    langchain-chroma
    langchain-ollama
    requests
    python-dotenv
    openai
    chromadb